# Minecraft-

./: CMakeLists.txt  README.md
assets/shaders/: fragment.glsl  vertex.glsl
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: Main.cpp
src/Core/: Game.cpp  Game.hpp  Shader.cpp  Shader.hpp  Util.hpp  Window.cpp  Window.hpp
